<resources>
    <string name="app_name">Videoclub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="descripci_n_de_la_pel_cula">Descripción de la película</string>
    <string name="t_tulo_de_la_pel_cula">Título de la película</string>
    <string name="modificar"> MODIFICAR </string>
    <string name="eliminar"> ELIMINAR  </string>
    <string name="title" />
    <string name="descripcion" />
    <string name="crear">Crear</string>
    <string name="url_de_la_portada">URL de la portada</string>
    <string name="descripci_n">Descripción</string>
    <string name="nombre_de_la_pel_cula">Nombre de la película</string>
    <string name="a_adir_pel_cula">AÑADIR PELÍCULA</string>
    <string name="videoclub">Videoclub</string>
</resources>